<resources>
    <string name="app_name">P2P Writers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books">Books</string>
    <string name="sales">Sales</string>
    <string name="salesperson">Salesperson</string>
    <string name="reports">Reports</string>
    <string name="todo">TODO</string>
    <string name="add_category">Add Category</string>
    <string name="add_books">Add Books</string>
    <string name="select_book_category">Select Book Category</string>
    <string name="select_send_to">Send To</string>
    <string name="select_book">Select Book</string>
    <string name="amount_hint">Enter Book Quantity</string>
    <string name="date_sent_hint">Date Sent</string>
    <string name="send_out">Send Books</string>
    <string name="book_category">Book Category</string>
    <string name="book_name">Book Name</string>
    <string name="amount">Amount</string>
</resources>