<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/fragment_sales.xml -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayoutSales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <!-- Table Header Row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkblue">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Send To"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:padding="8dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_category"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_name"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:padding="8dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:padding="8dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Date"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:padding="8dp"/>
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableLayoutSales"
        android:layout_marginTop="8dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddSales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_add_circle_24"/>

</RelativeLayout>
